# Hades

./: .gitignore  Cargo.toml
hs_app/: Cargo.toml
hs_app/src/: gui.rs  main.rs
hs_cli/: Cargo.toml
hs_cli/src/: main.rs
hs_db/: Cargo.toml
hs_db/src/: lib.rs
hs_dbg/: Cargo.toml
hs_dbg/src/: lib.rs
hs_gba/: Cargo.toml  build.rs
hs_gba/libgba/: meson.build
hs_gba/libgba/include/: channel.h  gba.h  utils.h
hs_gba/libgba/source/: channel.c  gba.c  log.c
hs_gba/src/: bindings.rs  config.rs  gba.rs  lib.rs  libgba_sys.rs  message.rs  notification.rs  shared.rs
libgba/: meson.build  meson_options.txt
libgba/include/: apu.h  channel.h  config.h  core.h  db.h  gba.h  gpio.h  hades.h  io.h  memory.h  ppu.h  scheduler.h
libgba/include/channel/: channel.h  event.h
libgba/include/core/: thumb.h
libgba/source/: channel.c  gba.c  scheduler.c  timer.c
libgba/source/apu/: apu.c  wave.c
libgba/source/core/: core.c
libgba/source/core/arm/: alu.c  bdt.c  branch.c  core.c  mul.c  psr.c  sdt.c  swi.c  swp.c
libgba/source/core/thumb/: alu.c  bdt.c  branch.c  core.c  logical.c  sdt.c  swi.c
libgba/source/gpio/: gpio.c  rtc.c
libgba/source/memory/: dma.c  io.c  memory.c
libgba/source/memory/storage/: eeprom.c  flash.c  storage.c
libgba/source/ppu/: oam.c  ppu.c  window.c
libgba/source/ppu/background/: affine.c  bitmap.c  text.c
